MDEV-32724 Segmentation fault due to Deep Recursion in table.cc and sql_lex.cc

Recursive CTE wrongly detected anchor because inner non-recursive CTE
wrongly assigned with-element table to itself due to inner-outer name
clash.